**2022-05: version 45.0**

* Added new config ``trap_exception`` and if set to ``True`` a Function's exception will be ignored with the error sent as a Status Message
  and a default payload returned like below, allowing the Workflow or Playbook to continue

  .. code-block::

    {
      "success": False,
      "reason": "Error message"
    }

**2022-04: version 44.1**

* Move Jinja template management functions to ``resilient-lib`` while
  keeping backward compatibility here

**2022-02: version 44.0**

* Ensure ``tests/`` is not included in packaged code
* Bump ``Jinja2`` to ``~=3.0`` for Python ``>=3.6``
* Officially support ``Python 3.9``

**2022-01: version 43.1**

* Bug fix for ``selftest``

**2021-11: version 43.0**

* Formatted Sphinx documentation and hosted it at https://ibm.biz/soar-python-docs

**2021-11: version 42.3**

* No major changes. Just bumping build number to coincide with other builds

**2021-10: version 42.2**

* No major changes. Just bumping build number to coincide with other builds

**2021-08: version 42.1**

* No major changes. Just bumping build number to coincide with other builds

**2021-08: version 42.0**

* Added support for ``HTTP_PROXY``, ``HTTPS_PROXY`` and ``NO_PROXY`` environmental variables. See the App Host Deployment Guide for details.
* Enhancement to ``selftest`` to also check connection back to SOAR platform.
* Added ``selftest_timeout`` to app.config file. It sets the value in seconds for ``selftest`` to wait for a response from the SOAR platform.
* Bug fixes.

**2021-06: version 41.1**

* Increase ``num_workers`` limit to 500

**2021-05: version 41.0**

* Deprecate ``test`` command
* Remove deprecated commands ``clone``, ``extract`` and ``extract``
* Increase ``num_workers`` limit to 100
* Added dependency of ``resilient-lib``
* Bug fixes
* Handle new app_function decorator

**2021-03: version 40.2**

* Bug fix for to use ``setuptools_scm < 6.0.0`` for Python 2.7 environments

**2021-03: version 40.1**
