@@ -3,11 +3,9 @@
 """Pytest Fixture for Testing Resilient Circuits Components"""
 
 import calendar
-import io
 import json
 import logging
 import os
-import shutil
 import sys
 import time
 import traceback
